--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html data-darklang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hamburgers/1.2.1/hamburgers.min.css">
 </head>
 
-<body>
+<body data-dark>
     <header class="header">
         <h1>Ejercicios del DOM</h1>
     </header>
@@ -25,7 +25,7 @@
         <!-- a[href="#seccion$"]*5{Sección $} -->
         <a href="#seccion1">Reloj Digital y Alarma Sonora</a>
         <a href="#seccion2">Eventos del Teclado</a>
-        <a href="#seccion3">Sección 3</a>
+        <a href="#seccion3">Cuenta Regresiva</a>
         <a href="#seccion4">Sección 4</a>
         <a href="#seccion5">Sección 5</a>
       </nav>
@@ -50,7 +50,8 @@
             </article>
         </section>
         <section id="seccion3" class="section">
-            <h2>Sección 3</h2>
+            <h2>Cuenta Regresiva para mi Cumpleaños</h2>
+            <div id="contdown"></div>
         </section>
         <section id="seccion4" class="section">
             <h2>Sección 4</h2>
@@ -59,6 +60,8 @@
             <h2>Sección 5</h2>
         </section>
     </main>
+    <button class="scroll-top-btn hidden">&#11014;</button>
+    <button class="dark-theme-btn">🌙</button>
     <script src="dom/index-dom.js" type="module"></script>
 </body>
 
