Ejercicios de detección de dispositivos y detección de webcam finalizados

--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -28,6 +28,9 @@
         <a href="#seccion3">Cuenta Regresiva</a>
         <a href="#seccion4">Responsive con JavaScript</a>
         <a href="#seccion5">Responsive Tester</a>
+        <a href="#seccion6">Detección de dispositivos (User Design)</a>
+        <a href="#seccion7">Detección de la conexión</a>
+        <a href="#seccion8">Detección de la cámara web</a>
       </nav>
     </aside>
     <main>
@@ -70,6 +73,17 @@
                 <input name="probar" type="submit" value="Probar">                
                 <input name="cerrar" type="button" value="Cerrar">
             </form>
+        </section>
+        <section id="seccion6" class="section">
+            <h2>Detección de dispositivos<br>(User Design)</h2>
+            <div id="user-device"></div>
+        </section>
+        <section id="seccion7" class="section">
+            <h2>Detección de la conexión</h2>            
+        </section>
+        <section id="seccion8" class="section">
+            <h2>Detección de la cámara web</h2> 
+            <video id="webcam"></video>          
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
