--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -31,6 +31,9 @@
         <a href="#seccion6">Detección de dispositivos (User Design)</a>
         <a href="#seccion7">Detección de la conexión</a>
         <a href="#seccion8">Detección de la cámara web</a>
+        <a href="#seccion9">Geolocalización</a>
+        <a href="#seccion10">Filtros de Búsqueda</a>
+        <a href="#seccion10">Sorteo Digital</a>
       </nav>
     </aside>
     <main>
@@ -84,6 +87,51 @@
         <section id="seccion8" class="section">
             <h2>Detección de la cámara web</h2> 
             <video id="webcam"></video>          
+        </section>
+        <section id="seccion9" class="section">
+            <h2>Geolocalización</h2> 
+            <div id="geolocation"></div>          
+        </section>
+        <section id="seccion10" class="section">
+            <h2>Filtros de Búsqueda</h2> 
+            <input type="search" placeholder="Buscar..." class="card-filter">    
+            <article class="cards">
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/nature" alt="Nature">
+                    <figcaption>Nature</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/any" alt="Any">
+                    <figcaption>Any</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/tech" alt="Tech">
+                    <figcaption>Tech</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/animals" alt="Animals">
+                    <figcaption>Animals</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/people" alt="People">
+                    <figcaption>People</figcaption>
+                </figure>
+                <figure class="card">
+                    <img src="https://placeimg.com/200/200/architecture" alt="Architecture">
+                    <figcaption>Architecture</figcaption>
+                </figure>
+            </article>      
+        </section>
+        <section id="seccion9" class="section">
+            <h2>Sorteo Digital</h2> 
+           <ul>
+            <li class="player">C#</li>
+            <li class="player">JAVA</li>
+            <li class="player">JAVASCRIPT</li>
+            <li class="player">PHYTON</li>
+            <li class="player">RUBY</li>
+           </ul>  
+           <button id="winner-btn">Obtener Ganador</button>      
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
