actualización dom_ejercicios.html con video nuevo

--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -166,9 +166,9 @@
         </section>
         <section id="seccion13" class="section" data-scroll-spy>
             <h2>Video Inteligente</h2> 
-            <video src="assets/Vista de los árboles de verano de abajo hacia arriba..mp4" muted controls loop data-smart-video></video>         
+            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>         
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <video src="assets/Vista de los árboles de verano de abajo hacia arriba..mp4" muted controls loop data-smart-video></video>   
+            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>   
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
