validaciones formularios y narrador

--- a/dom_ejercicios.html
+++ b/dom_ejercicios.html
@@ -16,27 +16,29 @@
     </header>
     <button class="panel-btn hamburger hamburger--collapse" type="button">
         <span class="hamburger-box">
-          <span class="hamburger-inner"></span>
+            <span class="hamburger-inner"></span>
         </span>
-      </button>
-      
-      <aside class="panel">
-      <nav class="menu">
-        <!-- a[href="#seccion$"]*5{Sección $} -->
-        <a href="#seccion1" data-scroll-spy>Reloj Digital y Alarma Sonora</a>        
-        <a href="#seccion2" data-scroll-spy>Eventos del Teclado</a> 
-        <a href="#seccion3" data-scroll-spy>Cuenta Regresiva</a>       
-        <a href="#seccion4" data-scroll-spy>Responsive con JavaScript</a>
-        <a href="#seccion5" data-scroll-spy>Responsive Tester</a>
-        <a href="#seccion6" data-scroll-spy>Detección de dispositivos (User Design)</a>
-        <a href="#seccion7" data-scroll-spy>Detección de la conexión</a>
-        <a href="#seccion8" data-scroll-spy>Detección de la cámara web</a>
-        <a href="#seccion9" data-scroll-spy>Geolocalización</a>
-        <a href="#seccion10" data-scroll-spy>Filtros de Búsqueda</a>
-        <a href="#seccion11" data-scroll-spy>Sorteo Digital</a>
-        <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
-        <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
-      </nav>
+    </button>
+
+    <aside class="panel">
+        <nav class="menu">
+            <!-- a[href="#seccion$"]*5{Sección $} -->
+            <a href="#seccion1" data-scroll-spy>Reloj Digital y Alarma Sonora</a>
+            <a href="#seccion2" data-scroll-spy>Eventos del Teclado</a>
+            <a href="#seccion3" data-scroll-spy>Cuenta Regresiva</a>
+            <a href="#seccion4" data-scroll-spy>Responsive con JavaScript</a>
+            <a href="#seccion5" data-scroll-spy>Responsive Tester</a>
+            <a href="#seccion6" data-scroll-spy>Detección de dispositivos (User Design)</a>
+            <a href="#seccion7" data-scroll-spy>Detección de la conexión</a>
+            <a href="#seccion8" data-scroll-spy>Detección de la cámara web</a>
+            <a href="#seccion9" data-scroll-spy>Geolocalización</a>
+            <a href="#seccion10" data-scroll-spy>Filtros de Búsqueda</a>
+            <a href="#seccion11" data-scroll-spy>Sorteo Digital</a>
+            <a href="#seccion12" data-scroll-spy>Responsive Slider</a>
+            <a href="#seccion13" data-scroll-spy>Video Inteligente</a>
+            <a href="#seccion14" data-scroll-spy>Validaciones de Formularios</a>
+            <a href="#seccion15" data-scroll-spy>Narrador</a>
+        </nav>
     </aside>
     <main>
         <!-- //secction#seccion$.section*5>h2{Sección $} -->
@@ -75,7 +77,7 @@
                 <br>
                 <input name="alto" type="text" placeholder="Alto" required>
                 <br>
-                <input name="probar" type="submit" value="Probar">                
+                <input name="probar" type="submit" value="Probar">
                 <input name="cerrar" type="button" value="Cerrar">
             </form>
         </section>
@@ -84,19 +86,19 @@
             <div id="user-device"></div>
         </section>
         <section id="seccion7" class="section" data-scroll-spy>
-            <h2>Detección de la conexión</h2>            
+            <h2>Detección de la conexión</h2>
         </section>
         <section id="seccion8" class="section" data-scroll-spy>
-            <h2>Detección de la cámara web</h2> 
-            <video id="webcam"></video>          
+            <h2>Detección de la cámara web</h2>
+            <video id="webcam"></video>
         </section>
         <section id="seccion9" class="section" data-scroll-spy>
-            <h2>Geolocalización</h2> 
-            <div id="geolocation"></div>          
+            <h2>Geolocalización</h2>
+            <div id="geolocation"></div>
         </section>
         <section id="seccion10" class="section" data-scroll-spy>
-            <h2>Filtros de Búsqueda</h2> 
-            <input type="search" placeholder="Buscar..." class="card-filter">    
+            <h2>Filtros de Búsqueda</h2>
+            <input type="search" placeholder="Buscar..." class="card-filter">
             <article class="cards">
                 <figure class="card">
                     <img src="https://placeimg.com/200/200/nature" alt="Nature">
@@ -122,30 +124,32 @@
                     <img src="https://placeimg.com/200/200/architecture" alt="Architecture">
                     <figcaption>Architecture</figcaption>
                 </figure>
-            </article>      
+            </article>
         </section>
         <section id="seccion11" class="section" data-scroll-spy>
-            <h2>Sorteo Digital</h2> 
-           <ul>
-            <li class="player">C#</li>
-            <li class="player">JAVA</li>
-            <li class="player">JAVASCRIPT</li>
-            <li class="player">PHYTON</li>
-            <li class="player">RUBY</li>
-           </ul>  
-           <button id="winner-btn">Obtener Ganador</button>      
+            <h2>Sorteo Digital</h2>
+            <ul>
+                <li class="player">C#</li>
+                <li class="player">JAVA</li>
+                <li class="player">JAVASCRIPT</li>
+                <li class="player">PHYTON</li>
+                <li class="player">RUBY</li>
+            </ul>
+            <button id="winner-btn">Obtener Ganador</button>
         </section>
         <section id="seccion12" class="section" data-scroll-spy>
             <h2>Responsive Slider</h2>
             <div class="slider">
                 <div class="slider-slides">
                     <div class="slider-slide active">
-                        <img src="https://placeimg.com/400/400/architecture" alt="Architecture"> 
+                        <img src="https://placeimg.com/400/400/architecture" alt="Architecture">
                     </div>
                     <div class="slider-slide">
                         Diapositiva 2
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quos rerum quae sint velit quo quasi, dolore sed esse maxime repellendus voluptate nesciunt placeat vero cumque nobis tenetur facilis itaque!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quos rerum quae sint velit
+                            quo quasi, dolore sed esse maxime repellendus voluptate nesciunt placeat vero cumque nobis
+                            tenetur facilis itaque!
                         </p>
                     </div>
                     <div class="slider-slide">
@@ -154,7 +158,9 @@
                     <div class="slider-slide">
                         Diapositiva 4
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quos rerum quae sint velit quo quasi, dolore sed esse maxime repellendus voluptate nesciunt placeat vero cumque nobis tenetur facilis itaque!
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quos rerum quae sint velit
+                            quo quasi, dolore sed esse maxime repellendus voluptate nesciunt placeat vero cumque nobis
+                            tenetur facilis itaque!
                         </p>
                     </div>
                 </div>
@@ -162,13 +168,46 @@
                     <a class="prev" href="#">&laquo</a>
                     <a class="next" href="#">&raquo</a>
                 </div>
-            </div>  
+            </div>
         </section>
         <section id="seccion13" class="section" data-scroll-spy>
-            <h2>Video Inteligente</h2> 
-            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>         
+            <h2>Video Inteligente</h2>
+            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>
             <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>   
+            <video src="assets/A trunk of a big tree.mp4" muted controls loop data-smart-video></video>
+        </section>
+        <section id="seccion14" class="section" data-scroll-spy>
+            <h2>Validaciones de Formularios</h2>
+            <form class="contact-form" action="https://formsubmit.co/carloscarmona0829@gmail.com" method="post"
+                translate="_blank">
+                <legend>Envíanos tus comentarios</legend>
+                <input type="text" name="name" placeholder="Escribe tu nombre"
+                    title="Nombre solo acepta letras y espacios en blanco" required
+                    pattern="^[A-Za-zÑñÁáÉéÍíÓóÚúÜü\s]+$">
+                <input type="email" name="email" placeholder="Escribe tu correo" title="Email incorrecto"
+                    pattern="^[a-z0-9]+(\.[_a-z0-9]+)*@[a-z0-9-]+(\.[a-z0-9-]+)*(\.[a-z]{2,15})$" required>
+                <input type="text" name="subject" placeholder="Asunto a tratar" title="Escribe un asunto" required>
+                <textarea name="comments" cols="50" rows="5" placeholder="Escribe tus comentarios"
+                    title="Tu comentario no debe exceder los 250 caracteres" data-pattern="^[\s\S]{1,255}$"
+                    required></textarea>
+                <input type="submit" value="Enviar">
+                <div class="contact-form-loader none">
+                    <img src="assets/loading-load.gif" alt="Cargando">
+                </div>
+                <div class="contact-form-response none">
+                    <p>Los datos han sido enviados</p>
+                </div>
+            </form>
+        </section>
+        <section id="seccion15" class="section" data-scroll-spy>
+            <h2>Narrador</h2>
+            <select id="speech-select">
+                <option value="">---Elige un avoz---</option>
+            </select>
+            <br><br>
+            <textarea id="speech-text" cols="50" rows="5" placeholder="Ingresa texto para leerlo..."></textarea>
+            <br><br>
+            <button id="speech-btn">Leer Texto</button>
         </section>
     </main>
     <button class="scroll-top-btn hidden">&#11014;</button>
