--- a/ajax-ejercicios/select-anidados.html
+++ b/ajax-ejercicios/select-anidados.html
@@ -11,9 +11,9 @@
 <body>
   <h1>Select Anidados</h1>
   <h2>Colombia</h2>
-  <label for="select-primary">Departamentos</label>
+  <label for="select-primary">Estados</label>
   <select name="primary" id="select-primary">
-    <option value="">Elige un Departamento</option>
+    <option value="">Elige un Estado</option>
   </select>
   <p></p>
   <label for="select-secondary">Municipios</label>
@@ -27,11 +27,35 @@
       $selectSecondary = d.getElementById("select-secondary");
 
     function loadStates() {
-
+      fetch("https://api.copomex.com/query/get_estados?token=pruebas")
+        .then(res => res.ok ? res.json() : Promise.reject(res))
+        .then(json => {
+          //console.log(json);
+          let $options = `<option value="">Elige un Estado</option>`;
+          json.response.estado.forEach(el => $options += `<option value="${el}">${el}</option>`);
+          $selectPrimary.innerHTML = $options;
+        })
+        .catch(err => {
+          console.log(err);
+          let message = err.statusText || "Ocurrio un error";
+          $selectPrimary.nextElementSibling.innerHTML = `${err.status}:${message}`
+        })
     }
 
-    function loadTowns(states) {
-
+    function loadTowns(state) {
+      fetch(`https://api.copomex.com/query/get_municipio_por_estado/${state}?token=pruebas`)
+        .then(res => res.ok ? res.json() : Promise.reject(res))
+        .then(json => {
+          //console.log(json);
+          let $options = `<option value="">Elige un Municipio</option>`;
+          json.response.municipios.forEach(el => $options += `<option value="${el}">${el}</option>`);
+          $selectSecondary.innerHTML = $options;
+        })
+        .catch(err => {
+          console.log(err);
+          let message = err.statusText || "Ocurrio un error";
+          $selectSecondary.nextElementSibling.innerHTML = `${err.status}:${message}`
+        })
     }
 
     d.addEventListener("DOMContentLoaded", loadStates);
